# gusti-harness

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  railway.json
infra/: Dockerfile  Dockerfile.runner  architecture.md  docker-compose.yml  railway.md
infra/k8s/: scaledobject.yaml  worker-deployment.yaml
src/: cli.py  server.py  worker.py
src/harness/: checkpoint.py  config.py  gitutil.py  graph.py  state.py  telemetry.py  workspace.py
src/harness/nodes/: abort.py  executor.py  planner.py  verifier.py
src/harness/prompts/: executor.md  planner.md  verifier.md
src/harness/tools/: fs_tools.py  sandbox.py
test-repo/: README.md
test-repo/app/: main.py
test-repo/tests/: test_orders.py  test_users.py
tests/: test_gitutil.py  test_path_guard.py  test_rollback_isolation.py  test_routing.py
