[project]
name = "gusti-harness"
version = "0.1.0"
description = "Production agent harness for multi-file refactoring (Planner/Executor/Verifier state machine)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",              # graph + checkpointers — PIN exact at build time
    "langgraph-checkpoint-sqlite",   # local durable checkpoints
    "langgraph-checkpoint-postgres", # prod durable checkpoints
    "anthropic>=0.40",               # direct SDK
    "pydantic>=2.7",                 # plan schema validation
    "arize-phoenix>=4.0",            # local LLM observability UI
    "openinference-instrumentation-anthropic",  # auto-traces Anthropic calls
    "opentelemetry-sdk",
    "redis>=5.0",                    # queue for the worker model
    "python-dotenv",
    "typer",                         # CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
